--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AndroidOpenGLES</string>
+    <string name="app_name">OpenGLES</string>
 
     <string name="change">切换</string>
 
@@ -16,62 +16,42 @@
     <string name="pic_easy">原图</string>
     <string name="pic_half">全部处理</string>
 
-    <string name="filter_none">Original</string>
-    <string name="filter_amaro">Amaro</string>
-    <string name="filter_brannan">Brannan</string>
-    <string name="filter_brooklyn">Brooklyn</string>
-    <string name="filter_Earlybird">EarlyBird</string>
-    <string name="filter_freud">Freud</string>
-    <string name="filter_hefe">Hefe</string>
-    <string name="filter_hudson">Hudson</string>
-    <string name="filter_inkwell">Inkwell</string>
-    <string name="filter_kevin">Kevin</string>
-    <string name="filter_lomo">Lomo</string>
-    <string name="filter_n1977">1977</string>
-    <string name="filter_nashville">Nashville</string>
-    <string name="filter_pixar">Pixar</string>
-    <string name="filter_rise">Rise</string>
-    <string name="filter_sierra">Sierra</string>
-    <string name="filter_sutro">Sutro</string>
-    <string name="filter_toastero">Toaster2</string>
-    <string name="filter_valencia">Valencia</string>
-    <string name="filter_walden">Walden</string>
-    <string name="filter_xproii">XproII</string>
-    <string name="filter_whitecat">WhiteCat</string>
-    <string name="filter_blackcat">BlackCat</string>
-    <string name="filter_romance">Romance</string>
-    <string name="filter_sakura">Sakura</string>
-    <string name="filter_antique">Antique</string>
-    <string name="filter_beauty">Beauty</string>
-    <string name="filter_calm">Calm</string>
-    <string name="filter_cool">Cool</string>
-    <string name="filter_emerald">Emerald</string>
-    <string name="filter_evergreen">Evergreen</string>
-    <string name="filter_fairytale">Fairytale</string>
-    <string name="filter_healthy">Healthy</string>
-    <string name="filter_latte">Latte</string>
-    <string name="filter_nostalgia">Nostalgia</string>
-    <string name="filter_tender">Tender</string>
-    <string name="filter_warm">Warm</string>
-    <string name="filter_sweets">Sweets</string>
-    <string name="filter_sunrise">Sunrise</string>
-    <string name="filter_sunset">Sunset</string>
-    <string name="filter_skinwhiten">SkinWhiten</string>
-    <string name="filter_crayon">Crayon</string>
-    <string name="filter_sketch">Sketch</string>
+    <string name="filter_none">原图</string>
+    <string name="filter_whitecat">白猫</string>
+    <string name="filter_blackcat">黑猫</string>
+    <string name="filter_romance">浪漫</string>
+    <string name="filter_sakura">樱花</string>
+    <string name="filter_antique">复古</string>
+    <string name="filter_beauty">美肤</string>
+    <string name="filter_calm">平静</string>
+    <string name="filter_cool">冰冷</string>
+    <string name="filter_emerald">祖母绿</string>
+    <string name="filter_evergreen">常青</string>
+    <string name="filter_fairytale">童话</string>
+    <string name="filter_healthy">健康</string>
+    <string name="filter_latte">拿铁</string>
+    <string name="filter_nostalgia">怀旧</string>
+    <string name="filter_tender">温柔</string>
+    <string name="filter_warm">温暖</string>
+    <string name="filter_sweets">甜品</string>
+    <string name="filter_sunrise">日出</string>
+    <string name="filter_sunset">日落</string>
+    <string name="filter_skinwhiten">美白</string>
+    <string name="filter_crayon">蜡笔</string>
+    <string name="filter_sketch">素描</string>
 
-    <string name="edit_filter">Filter</string>
-    <string name="edit_edit">Edit</string>
-    <string name="edit_adds">Adds</string>
-    <string name="edit_frame">Frame</string>
-    <string name="edit_beauty">Beauty</string>
+    <string name="edit_filter">滤镜</string>
+    <string name="edit_edit">编辑</string>
+    <string name="edit_adds">装饰</string>
+    <string name="edit_frame">边框</string>
+    <string name="edit_beauty">美颜</string>
 
-    <string name="edit_contrast">Contrast</string>
-    <string name="edit_exposure">Exposure</string>
-    <string name="edit_vibrance">Vibrance</string>
-    <string name="edit_saturation">Saturation</string>
-    <string name="edit_sharpness">Sharpness</string>
-    <string name="edit_brightness">Bright</string>
-    <string name="edit_hue">Hue</string>
+    <string name="edit_contrast">对比度</string>
+    <string name="edit_exposure">曝光</string>
+    <string name="edit_vibrance">自然饱和度</string>
+    <string name="edit_saturation">饱和度</string>
+    <string name="edit_sharpness">锐化</string>
+    <string name="edit_brightness">亮度</string>
+    <string name="edit_hue">色调</string>
 
 </resources>
